final election report video added to index

--- a/index.html
+++ b/index.html
@@ -161,11 +161,10 @@
           <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id='close2' class="close">
             <div class="modal-video-box">
                 <div class="video-box-sm">
-                    <iframe class='video-container' src="https://www.youtube.com/embed/WSvZ7nOT8M0?si=hgd4Lr6PmIzKNoh9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            
-
-                    <h3 class="video-heading-sm">Season Intro 2024</h3>
+                    <iframe src="https://www.youtube.com/embed/hf3XUG-rShM?si=Dq9HflDiriQSk_M6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <h3 class="video-heading-sm">Final Election Report 2024</h3>
                     <div class="video-sm-desc">
-                        Watch to get an idea of the upcoming elections here in Cumberland County.
+                        With just a few days left, watch our final impressions video to get a decent idea of what's happened.
                     </div>
                 </div>
             </div>
@@ -242,9 +241,8 @@
         </div>
 
         <div class="video-box-sm">
-            <iframe class='video-container' src="https://www.youtube.com/embed/WSvZ7nOT8M0?si=hgd4Lr6PmIzKNoh9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            
-            <div class="video-sm-desc">
-                Intro to Election Season 2024
+            <iframe src="https://www.youtube.com/embed/hf3XUG-rShM?si=Dq9HflDiriQSk_M6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            <div class="video-sm-desc">
+                 Final Report Season 2024
             </div>
         </div>
         
