--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
 
     <div class="cta-banner">
         <div class="cta-banner-heading">
-            Season Intro 2024
+            Final Election Report 2024 Season
         </div>
         <div class="cta-content">
             <div class="cta-text">
-                 Watch the video or read the summary to get an idea of the upcoming elections here in Cumberland County.
+                 With just a few days left of voting, watch to get our final impressions of this years' election season.
             </div>
             <div class="cta-link-box">
                  <button id ='videoSummary' class="hp-banner-button">Video Summary</button>
@@ -131,24 +131,43 @@
 
         <div class="modal-content">
           <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id='close1' class="close">
-          <h4 class="quick-sum">Intro to Election Season 2024</h4>
+          <h4 class="quick-sum">Final report Election Season 2024</h4>
           <h6 class="page-title">Read to get an idea of the upcoming elections here in Cumberland County.</h6>
 
           <p>
-            Hey Cumberland County! With the elections coming up and early voting starting in a few weeks, we have a bunch of election related info 
-            here on the site. Oftentimes many of us get the sample ballot in the mail or walk into the voting booth not knowing many of the names on 
-            the ballot, so hopefully this will help you vote with some more confidence. This year we have 2 seats open on the county commissioner's board,
-            the county clerk seat is open, many school board seats are open, a seat on the Millville city commissioner's board, the Vineland Mayor seat, 
-            the US House of Representatives seat, the US Senate seat, the Presidential election, and more. The focus of the site is local elections, as 
-            they aren't covered as much in the news. However, we do cover the national elections too, as many people are unaware of 3rd party candidates 
-            ahead of elections. Just don't expect any in-depth reviews for races like Trump vs Harris, as that is already widely covered. In fact, don't 
-            expect any super in-depth coverage here, as this is a grassroots effort. Think of this site as 'something is better than nothing' since the 
-            local newspaper doesn't do this work anymore. You can also view this as a starting point to getting more involved, as we have our suggestions 
-            on the Get-Involved section, and we have many local events listed on our Events section... that way you can get started on doing your own research,
-            and forming your own conclusions. If you feel a bit confused or overwhelmed, check out our tutorial video below to get some ideas on how to 
-            navigate the site. Also, if you have some objective information, interesting perspectives on the races, or general critiques of the site, 
-            you can visit our <a href="https://www.facebook.com/groups/781111154116727">facebook group</a>. Check back here in a few weeks or a month for 
-            updates, as the elections develop over time and the candidates continue to contribute information. Until next time.
+            US Senate - Curtis Bashaw is not your stereotypical Republican and Andy Kim is very party line. If you are a moderate or independent, Bashaw is definitely worth 
+            your consideration. Mooneyham and Khalil also had well laid out agendas, they probably deserved a spot on the debate stage.
+            <br>
+            <br>
+            US House of Representatives - Whether you like Van Drew or not, he's a powerhouse. With Salerno having a questionable campaign, he might not be currently strong 
+            enough to beat his opponent.
+            <br>
+            <br>
+            Cumberland County Commissioners - If it ain't broke, don't fix it. Cumberland County Democrats fail to make a compelling case for change, at least from where I'm sitting.
+            <br>
+            <br>
+            Cumberland County Clerk - Both candidates seem qualified and Riley is the incumbent, but a few potential mistakes during election season may have left her vulnerable 
+            to her challenger, Commissioner Lods.
+            <br>
+            <br>
+            Millville City Commissioner - All candidates seem like good choices, but Ranello is the incumbent and last minute issues may not be enough to compel a change.
+            <br>
+            <br>
+            Lawrence Township Committee - Incumbent Miletta has 17 years of experience compared to his newcomer challenger Woody, but Woody makes a compelling case for change.
+            <br>
+            <br>
+            Vineland City Council and Mayor races - Team Fanucci is a powerhouse with no visible case for change from challenger Arroyo on the council, and a campaign mostly 
+            based on attacks from former Mayor Romano.
+            <br>
+            <br>
+            Bridgeton, Fairfield, and Lawrence School boards - Extreme lack of information about these races. We need better press coverage.
+            <br>
+            <br>
+            Commercial Township School Board - 3 seats are open with 4 candidates. The three who communicated seem like good choices, with the only candidate Tracy Richardson
+            being unknown from our perspective.
+            <br>
+            <br>
+            Vineland School Board - There are lots of ways to look at this, and we wish all candidates had fully communicated, possibly with a candidates forum to dive in deep.
          </p>
 
         </div>
