test commit from mac

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
     <div class="cta-banner">
         <div class="cta-banner-heading">
-            Final Election Report 2024 Season
+            Final Election Report 2024 Season!
         </div>
         <div class="cta-content">
             <div class="cta-text">
