test update for primary season 2025

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <div class="modal-video-box">
                 <div class="video-box-sm">
                     <iframe src="https://www.youtube.com/embed/hf3XUG-rShM?si=Dq9HflDiriQSk_M6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    <h3 class="video-heading-sm">Final Election Report 2024</h3>
+                    <h3 class="video-heading-sm">Git sync test</h3>
                     <div class="video-sm-desc">
                         With just a few days left, watch our final impressions video to get a decent idea of what's happened.
                     </div>
