index page update for beginning of primary season 2025

--- a/index.html
+++ b/index.html
@@ -113,15 +113,15 @@
 
     <div class="cta-banner">
         <div class="cta-banner-heading">
-            Final Election Report 2024 Season!
+            We are currently in the process of updating for the 2025 primary election.
         </div>
         <div class="cta-content">
             <div class="cta-text">
-                 With just a few days left of voting, watch to get our final impressions of this years' election season.
+                 Check back in a week or so for primary info.
             </div>
             <div class="cta-link-box">
-                 <button id ='videoSummary' class="hp-banner-button">Video Summary</button>
-                 <button id='actualVideo' class="hp-banner-button">Video</button>
+                 <!-- <button id ='videoSummary' class="hp-banner-button">Video Summary</button>
+                 <button id='actualVideo' class="hp-banner-button">Video</button> -->
             </div>
         </div>
     </div>
@@ -208,12 +208,16 @@
                 </div>
                 <div class="nav-buttons-2">
                     <div class="elections-dropdown-links">
-                        <a href="child_pages/cc-elections/official_ballots_2024.html">Official Ballots Page</a>
+                        <!-- <a href="child_pages/cc-elections/official_ballots_2024.html">Official Ballots Page</a> -->
                         <a href="child_pages/cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a>
-                        <a href="child_pages/cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a>
-                        <a href="child_pages/cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a>
-                        <a href="child_pages/cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a>
-                        <a href="child_pages/cc-elections/vineland_city_council_2024.html">Vineland City Council</a>
+                        <a href="child_pages/cc-elections/state_assembly_legislative_district_1.html">State Assembly - 1st Legislative District</a>
+                        <a href="child_pages/cc-elections/state_assembly_legislative_district_3.html">State Assembly - 3rd Legislative District</a>
+                        <a href="child_pages/cc-elections/governor.html">Governor</a>
+
+                        <!-- <a href="child_pages/cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a> -->
+                        <!-- <a href="child_pages/cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a>
+                        <a href="child_pages/cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a> -->
+                        <!-- <a href="child_pages/cc-elections/vineland_city_council_2024.html">Vineland City Council</a>
                         <a href="child_pages/cc-elections/vineland_mayor_2024.html">Vineland Mayor</a>
                         <a href="child_pages/cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a>
                         <a href="child_pages/cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a>
@@ -223,19 +227,22 @@
                         <a href="child_pages/cc-elections/house_of_representatives_2024.html">US House of Representatives, NJ's 2nd Congressional District</a>
                         <a href="child_pages/cc-elections/us_senate_2024.html">US Senate, NJ</a>
                         <a href="child_pages/cc-elections/cc_vice_president_2024.html">US Vice President</a>
-                        <a href="child_pages/cc-elections/us_president_2024.html">US President</a>
+                        <a href="child_pages/cc-elections/us_president_2024.html">US President</a> -->
                     </div>
                 </div>
                 <div class="nav-buttons-3">
                     <div class="county-dropdown-links">
                         <a href="child_pages/cc-elections/cc_election_issues.html">County Issues</a>
-                        <a href="child_pages/cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a>
-                        <a href="child_pages/cc-elections/millville_city_issues.html">Millville City Issues</a>
+                        <a href="child_pages/cc-elections/state_assembly_legislative_district_1_issues.html">State Assembly - Legislative District 1 Issues</a>
+                        <a href="child_pages/cc-elections/state_assembly_legislative_district_3.html_issues">State Assembly - Legislative District 3 Issues</a>
+                        <a href="child_pages/cc-elections/governor_issues.html">Governor Issues</a>
+                        <!-- <a href="child_pages/cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a> -->
+                        <!-- <a href="child_pages/cc-elections/millville_city_issues.html">Millville City Issues</a>
                         <a href="child_pages/cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a>
                         <a href="child_pages/cc-elections/us_house_of_reps_issues.html">House of Representatives Issues</a>
                         <a href="child_pages/cc-elections/us_senate_issues.html">US Senate Issues</a>
                         <a href="child_pages/cc-elections/us_vice_president_issues.html">Vice President Issues</a>
-                        <a href="child_pages/cc-elections/us_president_issues.html">President Issues</a>
+                        <a href="child_pages/cc-elections/us_president_issues.html">President Issues</a> -->
                     </div>
                 </div>
             </div>
@@ -252,14 +259,14 @@
     <div class="hp-video-box">
 
         <div class="video-box-sm">
-            <iframe src="https://www.youtube.com/embed/RzMenmzY_-M?si=3CpJROnXAzE-MVPj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <!-- <iframe src="https://www.youtube.com/embed/RzMenmzY_-M?si=3CpJROnXAzE-MVPj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
             <h3 class="video-heading-sm"></h3>
             <div class="video-sm-desc">
-                Site Tutorial
+                Platform Interview with State Assembly Candidate Brandon Saffold Coming Soon!
             </div>
         </div>
 
-        <div class="video-box-sm">
+        <!-- <div class="video-box-sm">
             <iframe src="https://www.youtube.com/embed/hf3XUG-rShM?si=Dq9HflDiriQSk_M6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            <div class="video-sm-desc">
                  Final Report Season 2024
             </div>
@@ -271,7 +278,7 @@
             <div class="video-sm-desc">  
                 Interview with Charlie Woody, Candidate for Lawrence Township Committee
             </div>
-        </div>
+        </div> -->
 
     </div>
 
