--- a/child_pages/cc-elections/Candidates/sweeney.html
+++ b/child_pages/cc-elections/Candidates/sweeney.html
@@ -134,13 +134,16 @@
              <div class="website">
                  
                  <a href="https://www.stevesweeneyforgovernor.com/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Campaign Site</button></a>
-                 
+                 <a href="https://x.com/SteveSweeney_NJ" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Twitter/X</button></a>
+                 <a href="https://www.facebook.com/stevesweeneyforgovernor" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook</button></a>
+                 <a href="https://www.instagram.com/stevesweeney_nj/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Instagram</button></a>
+
              </div>
 
              <button class="quick-summary-reopen">quick summary</button>
 
              <div class="election-date">
-                 <p>This election is on November 5th, 2024</p>
+                 <p>This election is on June 10th, 2025</p>
              </div>
 
              <div class="animal-box">
