--- a/child_pages/cc-elections/Candidates/spiller.html
+++ b/child_pages/cc-elections/Candidates/spiller.html
@@ -56,9 +56,9 @@
                                 <input type="checkbox" name="accordion" id="third">
                                 <label for="third">Governor and State Assembly Elections</label>
                                 <div class="nested-burger-links">
-                                    <li class="link"><a href="../../../cc-elections/state_assembly_legislative_district_1.html">State Assembly - 1st Legislative District</a></li>
-                                    <li class="link"><a href="../../../cc-elections/state_assembly_legislative_district_3.html">State Assembly - 3rd Legislative District</a></li>
-                                    <li class="link"><a href="../../../cc-elections/governor.html">Governor</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/state_assembly_legislative_district_1.html">State Assembly - 1st Legislative District</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/state_assembly_legislative_district_3.html">State Assembly - 3rd Legislative District</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/governor.html">Governor</a></li>
                                     <!-- <li class="link"><a href="../../../child_pages/cc-elections/house_of_representatives_2024.html">US House of Representatives, NJ's 2nd Congressional District</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/us_senate_2024.html">US Senate, NJ</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/cc_vice_president_2024.html">US Vice President</a></li>
@@ -71,9 +71,9 @@
                                 <label for="fourth">Issues</label>
                                 <div class="nested-burger-links">
                                     <li class="link"><a href="../../../child_pages/cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
-                                    <li class="link"><a href="../../../cc-elections/state_assembly_legislative_district_1_issues.html">State Assembly - Legislative District 1 Issues</a></li>
-                                    <li class="link"><a href="../../../cc-elections/state_assembly_legislative_district_3.html_issues">State Assembly - Legislative District 3 Issues</a></li>
-                                    <li class="link"><a href="../../../cc-elections/governor_issues.html">Governor Issues</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/state_assembly_legislative_district_1_issues.html">State Assembly - Legislative District 1 Issues</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/state_assembly_legislative_district_3.html_issues">State Assembly - Legislative District 3 Issues</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/governor_issues.html">Governor Issues</a></li>
                                     <!-- <li class="link"><a href="../../../child_pages/cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/millville_city_issues.html">Millville City Issues</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
