republican gubernatorial primary candidate skeleton pages

--- a/child_pages/cc-elections/Candidates/kranjac.html
+++ b/child_pages/cc-elections/Candidates/kranjac.html
@@ -9,10 +9,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
-        <meta property="og:title" content="Inform The Vote NJ - Justin Barbera">
-        <meta property="og:description" content="Election information about Justin Barbera">
+        <meta property="og:title" content="Inform The Vote NJ - Mario Kranjac">
+        <meta property="og:description" content="Election information about Mario Kranjac">
         <meta property="og:image" content="https://i.postimg.cc/hGHsKm2M/informthevotepreviewimg.png">
-        <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/candidates/barbera">
+        <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/candidates/kranjac">
     </head>
     <body>
         <div class="menu-wrap">
@@ -102,7 +102,7 @@
             <div class="modal-content">
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
               <h4 class="quick-sum">quick summary</h4>
-              <h6 class="page-title">Justin Barbera</h6>
+              <h6 class="page-title">Mario Kranjac</h6>
               <p>          
 
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -117,7 +117,7 @@
     
 
      <div class="title-info">
-        <h2>Barbera</h2>
+        <h2>Kranjac</h2>
          <div class="running-for">
              <div class="running-title">Running for: </div>
              <div class="position">Governor</div>
@@ -128,15 +128,15 @@
          </div>
      </div>
      <div class="candidate-pic-box">
-         <img class="cover" src="../../../assets/candidates/barbera.jpg" class="candidate-pic">
+         <img class="cover" src="../../../assets/candidates/kranjac.jpeg" class="candidate-pic">
          <div class="candidate-pic-box-content">
              <h4 class="sub-heading">Websites</h4>
              <div class="website">
                  
-                 <!-- <a href="https://www.spadeaforgovernor.com/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Campaign Site</button></a>
-                 <a href="https://x.com/JonBramnick2025" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Twitter/X</button></a> -->
-                 <a href="https://www.facebook.com/justin.barbera.75" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook</button></a>
-                 <!-- <a href="https://vimeo.com/user221249262" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Vimeo</button></a> -->
+                 <a href="https://mariofornj.com/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Campaign Site</button></a>
+                 <a href="https://x.com/mariokranjac" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Twitter/X</button></a>
+                 <a href="https://www.facebook.com/mariokranjac" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook</button></a>
+                 <a href="https://truthsocial.com/@MarioKranjac" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Truth Social</button></a>
 
              </div>
 
