--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -441,7 +441,7 @@
                                         <p>Republican</p> 
                                     </div>
                                     <div class="first-name">
-                                        <a href="Candidates/ciatarelli.html">Jack</a>
+                                        <a href="Candidates/ciattarelli.html">Jack</a>
                                     </div>
                                     <div class="number-a-and-circle"> 
                                         <p>1A</p>
@@ -450,7 +450,7 @@
                                 </div>
                                 <div class="a-row-2">
                                     <div class="last-name push-down-last-name">
-                                        <a href="Candidates/ciatarelli.html">Ciatarelli</a>
+                                        <a href="Candidates/ciattarelli.html">Ciatarelli</a>
                                     </div>
                                 </div>
             
