small fixes to gubernatorial candidate skeleton pages

--- a/child_pages/cc-elections/Candidates/barbera.html
+++ b/child_pages/cc-elections/Candidates/barbera.html
@@ -117,7 +117,7 @@
     
 
      <div class="title-info">
-        <h2>Barbera</h2>
+        <h2>Justin Barbera</h2>
          <div class="running-for">
              <div class="running-title">Running for: </div>
              <div class="position">Governor</div>
