--- a/child_pages/cc-elections/state_assembly_legislative_district_1.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_1.html
@@ -358,7 +358,7 @@
                                         <p>Republican</p> 
                                     </div>
                                     <div class="first-name">
-                                        <a href="Candidates/simonsone.html">Erik K.</a>
+                                        <a href="Candidates/simonson.html">Erik K.</a>
                                     </div>
                                     <div class="number-a-and-circle"> 
                                         <p>1A</p>
@@ -383,13 +383,15 @@
                         </div><!-- end of state-senator-row, aka single ballot choice -->  
 
                         <div class="state-senator row">
-                            <div class="ot-english">
-                                <p>General Assembly</p>
-                                <p>Vote for Two</p>
-                            </div>
-                            <div class="ot-espanol">
-                                <p>Asamblea General</p>
-                                <p>Vota por Dos</p>
+                            <div class="office-title">
+                                <div class="ot-english">
+                                    <p>General Assembly</p>
+                                    <p>Vote for Two</p>
+                                </div>
+                                <div class="ot-espanol">
+                                    <p>Asamblea General</p>
+                                    <p>Vota por Dos</p>
+                                </div>
                             </div>
                             <div class="a">
                                 <div class="a-row-1">
@@ -419,7 +421,7 @@
                                 </div>
                                 <div class="pc-col-2">0</div>
                             </div>
-                        </div><!-- end of state-senator-row, aka a single ballot choice -->  
+                        </div><!-- end of state-senator-row, aka single ballot choice -->  
 
                     </div><!-- end of republcian candidates-->
                        
