--- a/child_pages/cc-elections/Candidates/rush.html
+++ b/child_pages/cc-elections/Candidates/rush.html
@@ -134,7 +134,7 @@
          </div>
      </div>
      <div class="candidate-pic-box">
-         <img class="cover" src="../../../assets/candidates/saffold.jpg" class="candidate-pic">
+         <img class="cover" src="../../../assets/candidates/rush.jpg" class="candidate-pic">
          <div class="candidate-pic-box-content">
              <h4 class="sub-heading">Websites</h4>
              <div class="website">
@@ -144,10 +144,10 @@
                 <a href="https://www.instagram.com/ld1_dems/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Instagram</button></a>
     
                 
-                <a href="https://twitter.com/carolynrush31" target="_blank" rel="noopener noreferrer" class="website-link">Twitter/X</a>
-                <a href="https://www.instagram.com/carolynforcongress/" target="_blank" rel="noopener noreferrer" class="website-link">Instagram</a>
-                <a href="https://www.linkedin.com/in/carolyn-rush-a9b5a919a/" target="_blank" rel="noopener noreferrer" class="website-link">LinkedIn</a>
-                <a href="https://www.youtube.com/c/CarolynRushforCongress" target="_blank" rel="noopener noreferrer" class="website-link">YouTube Channel</a>
+                <a href="https://twitter.com/carolynrush31" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Twitter/X</button></a>
+                <a href="https://www.instagram.com/carolynforcongress/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Instagram</button></a>
+                <a href="https://www.linkedin.com/in/carolyn-rush-a9b5a919a/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">LinkedIn</button></a>
+                <a href="https://www.youtube.com/c/CarolynRushforCongress" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">YouTube</button></a>
 
              </div>
 
