--- a/child_pages/cc-elections/Candidates/simonsen.html
+++ b/child_pages/cc-elections/Candidates/simonsen.html
@@ -128,16 +128,16 @@
          </div>
      </div>
      <div class="candidate-pic-box">
-         <img class="cover" src="../../../assets/candidates/simonsen.jpg" class="candidate-pic">
+         <img class="cover" src="../../../assets/candidates/simonsen.webp" class="candidate-pic">
          <div class="candidate-pic-box-content">
              <h4 class="sub-heading">Websites</h4>
              <div class="website">
                  
-                <a href="https://www.ccrrogop.org/newjersey-assembly" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland County Republicans Site</a>
-                <a href="https://www.facebook.com/AsmSimo43" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
-                <a href="https://www.instagram.com/simotwelve01/?hl=en" target="_blank" rel="noopener noreferrer" class="website-link">Instagram</a>
-                <a href="https://twitter.com/eriksimonsene?lang=en" target="_blank" rel="noopener noreferrer" class="website-link">Twitter/X</a>
-                <a href="https://en.wikipedia.org/wiki/Erik_K._Simonsen" target="_blank" rel="noopener noreferrer" class="website-link">Wikipedia</a>
+                <a href="https://www.ccrrogop.org/newjersey-assembly" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site"><button class="candidate-ext-site">Party Site</button></a>
+                <a href="https://www.facebook.com/AsmSimo43" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site"><button class="candidate-ext-site">Facebook</button></a>
+                <a href="https://www.instagram.com/simotwelve01/?hl=en" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Instagram</button></a>
+                <a href="https://twitter.com/eriksimonsene?lang=en" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Twitter/X</button></a>
+                <a href="https://en.wikipedia.org/wiki/Erik_K._Simonsen" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Wikipedia</button></a>
              </div>
 
              <button class="quick-summary-reopen">quick summary</button>
