--- a/index.html
+++ b/index.html
@@ -51,18 +51,18 @@
                         
                         <div class="accordion">
                             <input type="checkbox" name="accordion" id="first">
-                            <label for="first">County Elections</label>
+                            <label for="first">County and Municipal Elections</label>
                             <div class="nested-burger-links">
                                 <li class="link"><a href="child_pages/cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a></li>
+                                <!-- <li class="link"><a href="child_pages/cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/vineland_city_council_2024.html">Vineland City Council</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/vineland_mayor_2024.html">Vineland Mayor</a></li>                                
+                                <li class="link"><a href="child_pages/cc-elections/vineland_mayor_2024.html">Vineland Mayor</a></li>                                 -->
                             </div>
                         </div>
 
-                        <div class="accordion">
+                        <!-- <div class="accordion">
                             <input type="checkbox" name="accordion" id="second">
                             <label for="second">School Board Elections</label>
                             <div class="nested-burger-links">
@@ -72,16 +72,19 @@
                                 <li class="link"><a href="child_pages/cc-elections/lawrence_school_board_2024.html">Lawrence Township School Board</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/vsb_2024.html">Vineland School Board</a></li>
                             </div>
-                        </div>
+                        </div> -->
 
                         <div class="accordion">
                             <input type="checkbox" name="accordion" id="third">
-                            <label for="third">State and National Elections</label>
+                            <label for="third">Governor and State Elections</label>
                             <div class="nested-burger-links">
-                                <li class="link"><a href="child_pages/cc-elections/house_of_representatives_2024.html">US House of Representatives, NJ's 2nd Congressional District</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/state_assembly_legislative_district_1.html">State Assembly - 1st Legislative District</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/state_assembly_legislative_district_3.html">State Assembly - 3rd Legislative District</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/governor.html">Governor</a></li>
+                                <!-- <li class="link"><a href="child_pages/cc-elections/house_of_representatives_2024.html">US House of Representatives, NJ's 2nd Congressional District</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/us_senate_2024.html">US Senate, NJ</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/cc_vice_president_2024.html">US Vice President</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/us_president_2024.html">US President</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/us_president_2024.html">US President</a></li> -->
                             </div>
                         </div>
 
@@ -90,13 +93,16 @@
                             <label for="fourth">Issues</label>
                             <div class="nested-burger-links">
                                 <li class="link"><a href="child_pages/cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/state_assembly_legislative_district_1_issues.html">State Assembly - Legislative District 1 Issues</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/state_assembly_legislative_district_3.html_issues">State Assembly - Legislative District 3 Issues</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/governor_issues.html">Governor Issues</a></li>
+                                <!-- <li class="link"><a href="child_pages/cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/millville_city_issues.html">Millville City Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/us_house_of_reps_issues.html">House of Representatives Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/us_senate_issues.html">US Senate Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/us_vice_president_issues.html">Vice President Issues</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/us_president_issues.html">President Issues</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/us_president_issues.html">President Issues</a></li> -->
                             </div>
                         </div>
 
