double buttons removed from albrecht and lods pages

--- a/child_pages/cc-elections/Candidates/lods.html
+++ b/child_pages/cc-elections/Candidates/lods.html
@@ -386,8 +386,8 @@
              <h4 class="sub-heading">Websites</h4>
              <div class="website">
                  
-                <a href="https://www.ccrrogop.org/cumberlandcountycommissioners" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site"><button class="candidate-ext-site">Party Site</button></a>
-                <a href="https://www.facebook.com/victoria.groetschlods" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site"><button class="candidate-ext-site">Facebook</button></a>
+                <a href="https://www.ccrrogop.org/cumberlandcountycommissioners" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Party Site</button></a>
+                <a href="https://www.facebook.com/victoria.groetschlods" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook</button></a>
                 
             </div>
 
