--- a/child_pages/cc-elections/Candidates/albrecht.html
+++ b/child_pages/cc-elections/Candidates/albrecht.html
@@ -133,8 +133,8 @@
              <h4 class="sub-heading">Websites</h4>
              <div class="website">
                  
-                <a href="https://www.ccrrogop.org/cumberlandcountycommissioners" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site"><button class="candidate-ext-site">Party Site</button></a>
-                <a href="https://www.facebook.com/douglas.albrecht.92" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site"><button class="candidate-ext-site">Facebook</button></a>
+                <a href="https://www.ccrrogop.org/cumberlandcountycommissioners" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Party Site</button></a>
+                <a href="https://www.facebook.com/douglas.albrecht.92" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook</button></a>
                 
             </div>
 
