--- a/child_pages/cc-elections/state_assembly_legislative_district_3.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_3.html
@@ -253,7 +253,7 @@
                     </div>
                     <div class="a-row-2">
                         <div class="last-name  push-down-last-name">
-                            <a href="Candidates/dave.html">Bailey</a>
+                            <a href="Candidates/bailey.html">Bailey</a>
                         </div>
                     </div>
 
