some more cleanup

--- a/child_pages/cc-elections/state_assembly_legislative_district_3.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_3.html
@@ -109,6 +109,10 @@
           <h6 class="page-title">State Assembly - Legislative District 3</h6>
           <p>
             
+            As of right now, there seems to be a discrepancy between the candidates I received from the Cumberland County Clerk's office and the names seen in a few 
+            New Jersey Globe articles covering South Jersey politics. Specifically, Chris Konawell was on the excel spreadsheet I received from the clerk, while 
+            the NJ Globe article implies it would be Ed Ramsay instead. Are all 3 running and only a few got endorsements? If so, why aren't all 3 named on the excel 
+            sheet? I will be checking with the Salem County Clerk.
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
 
           </p>
@@ -326,7 +330,7 @@
                                 </div>
                                 <div class="a-row-2">
                                     <div class="last-name push-down-last-name">
-                                        <a href="Candidates/konawell.html">Konawail</a>
+                                        <a href="Candidates/konawell.html">Konawell</a>
                                     </div>
                                 </div>
             
