insider nj article added to saffold and rushs pages

--- a/child_pages/cc-elections/Candidates/rush.html
+++ b/child_pages/cc-elections/Candidates/rush.html
@@ -215,9 +215,9 @@
                 </ul>
             </div>
             
-            <h4 class="sub-heading">Background and Campaign Message</h4>
+            <h4 class="sub-heading">Related Media</h4>
             <div class="experience can-sec">
-                
+                <a href="https://www.insidernj.com/press-release/ld1-candidates-brandon-saffold-carolyn-rush-oppose-a5117-fighting-for-fair-ballot-access/?utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer" class="website-link">Insider NJ Article</a> about Assembly Bill A5117, which increased the number of signatures needed to gain ballot access.
             </div>
 
             <h4 class="sub-heading">Experience</h4>
