carol sabos name corrected

--- a/child_pages/cc-elections/Candidates/sabo.html
+++ b/child_pages/cc-elections/Candidates/sabo.html
@@ -9,8 +9,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
-        <meta property="og:title" content="Inform The Vote NJ - Carolyn Sabo">
-        <meta property="og:description" content="Election information about Carolyn Sabo">
+        <meta property="og:title" content="Inform The Vote NJ - Carol Sabo">
+        <meta property="og:description" content="Election information about Carol Sabo">
         <meta property="og:image" content="https://i.postimg.cc/hGHsKm2M/informthevotepreviewimg.png">
         <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/candidates/sabo">
     </head>
@@ -102,7 +102,7 @@
             <div class="modal-content">
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
               <h4 class="quick-sum">quick summary</h4>
-              <h6 class="page-title">Carolyn Sabo</h6>
+              <h6 class="page-title">Carol Sabo</h6>
               <p>          
 
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -117,7 +117,7 @@
     
 
      <div class="title-info">
-        <h2>Carolyn Sabo</h2>
+        <h2>Carol Sabo</h2>
          <div class="running-for">
              <div class="running-title">Running for: </div>
              <div class="position">State Assembly - Legislative District 1</div>
