--- a/child_pages/cc-elections/state_assembly_legislative_district_1.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_1.html
@@ -286,7 +286,7 @@
                             
                         </div>
                         <div class="first-name">
-                            <a href="Candidates/sabo.html">Carolyn</a>
+                            <a href="Candidates/sabo.html">Carol</a>
                         </div>
                         <div class="number-a-and-circle"> 
                             <p>1A</p>
