rush/saffold interview added, parents rights interviews added

--- a/child_pages/cc-elections/Candidates/ciattarelli.html
+++ b/child_pages/cc-elections/Candidates/ciattarelli.html
@@ -161,7 +161,11 @@
          </div>
      </div>
 
-        
+     <div class="video-box-modal can-sec">
+        <h3 class="video-heading">InformTheVoteNJ Interview With Charlie Woody</h3>
+
+        <iframe src="https://www.youtube.com/embed/GIG98259g1Q?si=B1S-XLLFcLh8MDA1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    
+    </div> 
             
      <div class="candidate-agenda">
 
