--- a/child_pages/cc-elections/Candidates/spadea.html
+++ b/child_pages/cc-elections/Candidates/spadea.html
@@ -160,7 +160,11 @@
          </div>
      </div>
 
-        
+     <div class="video-box-modal can-sec">
+        <h3 class="video-heading">InformTheVoteNJ Interview With Charlie Woody</h3>
+
+        <iframe src="https://www.youtube.com/embed/9xTvjtj_CiU?si=CS4vlbtQtsNSiLq4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    
+    </div>     
             
      <div class="candidate-agenda">
 
