--- a/index.html
+++ b/index.html
@@ -249,7 +249,11 @@
                 </div>
                 <div class="nav-buttons-3">
                     <div class="county-dropdown-links">
-                        <a href="child_pages/cc-elections/cc_election_issues.html">County Issues</a>
+                        <a href="child_pages/cc-elections/cc_election_issues.html">Cumberland County Issues</a>
+                        <a href="child_pages/cc-elections/commercial_township_issues.html">Commercial Township Issues</a>
+                        <a href="child_pages/cc-elections/downe_township_issues.html">Downe Township Issues</a>
+                        <a href="child_pages/cc-elections/lawrence_township_issues.html">Lawrence Township Issues</a>
+
                         <a href="child_pages/cc-elections/state_assembly_legislative_district_1_issues.html">State Assembly - Legislative District 1 Issues</a>
                         <a href="child_pages/cc-elections/state_assembly_legislative_district_3.html_issues">State Assembly - Legislative District 3 Issues</a>
                         <a href="child_pages/cc-elections/governor_issues.html">Governor Issues</a>
