--- a/child_pages/cc-elections/cc_county_commissioners_2024.html
+++ b/child_pages/cc-elections/cc_county_commissioners_2024.html
@@ -32,9 +32,12 @@
                             <label for="first">County and Municipal Elections</label>
                             <div class="nested-burger-links">
                                 <li class="link"><a href="../cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a></li>
-                                
-                                <!-- <li class="link"><a href="../cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a></li> -->
-                                <!-- <li class="link"><a href="../cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
+                                <li class="link"><a href="../cc-elections/commercial_township_committee.html">Commercial Township Committee</a></li>
+                                <li class="link"><a href="../cc-elections/downe_township_committee.html">Downe Township Committee</a></li>
+                                <li class="link"><a href="../cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li>
+
+                                <!-- <li class="link"><a href="../cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a></li>
+                                <li class="link"><a href="../cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
                                 <li class="link"><a href="../cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li>
                                 <li class="link"><a href="../cc-elections/vineland_city_council_2024.html">Vineland City Council</a></li>
                                 <li class="link"><a href="../cc-elections/vineland_mayor_2024.html">Vineland Mayor</a></li>                                 -->
@@ -55,11 +58,12 @@
 
                         <div class="accordion">
                             <input type="checkbox" name="accordion" id="third">
-                            <label for="third">Governor and State Assembly Elections</label>
+                            <label for="third">Governor and State Elections</label>
                             <div class="nested-burger-links">
                                 <li class="link"><a href="../cc-elections/state_assembly_legislative_district_1.html">State Assembly - 1st Legislative District</a></li>
                                 <li class="link"><a href="../cc-elections/state_assembly_legislative_district_3.html">State Assembly - 3rd Legislative District</a></li>
                                 <li class="link"><a href="../cc-elections/governor.html">Governor</a></li>
+
                                 <!-- <li class="link"><a href="../cc-elections/house_of_representatives_2024.html">US House of Representatives, NJ's 2nd Congressional District</a></li>
                                 <li class="link"><a href="../cc-elections/us_senate_2024.html">US Senate, NJ</a></li>
                                 <li class="link"><a href="../cc-elections/cc_vice_president_2024.html">US Vice President</a></li>
@@ -72,9 +76,14 @@
                             <label for="fourth">Issues</label>
                             <div class="nested-burger-links">
                                 <li class="link"><a href="../cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
+                                <li class="link"><a href="../cc-elections/commercial_township_issues.html">Commercial Township Issues</a></li>
+                                <li class="link"><a href="../cc-elections/downe_township_issues.html">Downe Township Issues</a></li>
+                                <li class="link"><a href="../cc-elections/lawrence_township_issues.html">Lawrence Township Issues</a></li>
                                 <li class="link"><a href="../cc-elections/state_assembly_legislative_district_1_issues.html">State Assembly - Legislative District 1 Issues</a></li>
-                                <li class="link"><a href="../cc-elections/state_assembly_legislative_district_3.html_issues">State Assembly - Legislative District 3 Issues</a></li>
+                                <li class="link"><a href="../cc-elections/state_assembly_legislative_district_3_issues.html">State Assembly - Legislative District 3 Issues</a></li>
                                 <li class="link"><a href="../cc-elections/governor_issues.html">Governor Issues</a></li>
+
+
                                 <!-- <li class="link"><a href="../cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a></li>
                                 <li class="link"><a href="../cc-elections/millville_city_issues.html">Millville City Issues</a></li>
                                 <li class="link"><a href="../cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
