--- a/child_pages/cc-elections/downe_township_committee.html
+++ b/child_pages/cc-elections/downe_township_committee.html
@@ -82,6 +82,10 @@
                                 <li class="link"><a href="../cc-elections/commercial_township_issues.html">Commercial Township Issues</a></li>
                                 <li class="link"><a href="../cc-elections/downe_township_issues.html">Downe Township Issues</a></li>
                                 <li class="link"><a href="../cc-elections/lawrence_township_issues.html">Lawrence Township Issues</a></li>
+                                <li class="link"><a href="../cc-elections/state_assembly_legislative_district_1_issues.html">State Assembly - Legislative District 1 Issues</a></li>
+                                <li class="link"><a href="../cc-elections/state_assembly_legislative_district_3_issues.html">State Assembly - Legislative District 3 Issues</a></li>
+                                <li class="link"><a href="../cc-elections/governor_issues.html">Governor Issues</a></li>
+
 
                                 <!-- <li class="link"><a href="../cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a></li>
                                 <li class="link"><a href="../cc-elections/millville_city_issues.html">Millville City Issues</a></li>
