--- a/child_pages/cc-elections/Candidates/sweeney.html
+++ b/child_pages/cc-elections/Candidates/sweeney.html
@@ -144,6 +144,7 @@
              <div class="website">
                  
                  <a href="https://www.stevesweeneyforgovernor.com/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Campaign Site</button></a>
+                 <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Cumberland County Dems Site</button></a>
                  <a href="https://x.com/SteveSweeney_NJ" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Twitter/X</button></a>
                  <a href="https://www.facebook.com/stevesweeneyforgovernor" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook</button></a>
                  <a href="https://www.instagram.com/stevesweeney_nj/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Instagram</button></a>
