--- a/child_pages/cc-elections/Candidates/spadea.html
+++ b/child_pages/cc-elections/Candidates/spadea.html
@@ -170,10 +170,34 @@
          </div>
      </div>
 
-     <div class="video-box-modal can-sec">
-        <h3 class="video-heading">InformTheVoteNJ Interview With Charlie Woody</h3>
+     <div class="event-card">
+        <ul class="event-info">
+            <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
+            <li class="description">Listen to party messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar"> Party Site</a></li>
+            <li class="date-and-time">04/26/25 - 8:30am</li>
+            <li class="location">Mauricetown Fire Company, 9544 Noble St. Mauricetown, NJ 08349</li>
+            <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
+        </ul>
+    </div>    
 
-        <iframe src="https://www.youtube.com/embed/9xTvjtj_CiU?si=CS4vlbtQtsNSiLq4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    
+    <div class="event-card">
+        <ul class="event-info">
+            <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
+            <li class="description">Listen to party messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar"> Party Site</a></li>
+            <li class="date-and-time">05/10/25 - 8:30am</li>
+            <li class="location">Eastlyn Golf Course, 4049 Italia Ave, Vineland, NJ, 08361</li>
+            <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
+        </ul>
+    </div>  
+
+    <div class="event-card">
+        <ul class="event-info">
+            <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
+            <li class="description">Listen to party messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar"> Party Site</a></li>
+            <li class="date-and-time">05/24/25 - 8:30am</li>
+            <li class="location">Mauricetown Fire Company, 9544 Noble St. Mauricetown, NJ 08349</li>
+            <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
+        </ul>
     </div>     
             
      <div class="candidate-agenda">
