--- a/child_pages/cc-elections/Candidates/tisa.html
+++ b/child_pages/cc-elections/Candidates/tisa.html
@@ -166,7 +166,45 @@
          </div>
      </div>
 
-        
+     <div class="event-card">
+        <ul class="event-info">
+            <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
+            <li class="description">Listen to party messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar"> Party Site</a></li>
+            <li class="date-and-time">04/26/25 - 8:30am</li>
+            <li class="location">Mauricetown Fire Company, 9544 Noble St. Mauricetown, NJ 08349</li>
+            <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
+        </ul>
+    </div>    
+
+    <div class="event-card">
+        <ul class="event-info">
+            <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
+            <li class="description">Listen to party messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar"> Party Site</a></li>
+            <li class="date-and-time">05/10/25 - 8:30am</li>
+            <li class="location">Eastlyn Golf Course, 4049 Italia Ave, Vineland, NJ, 08361</li>
+            <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
+        </ul>
+    </div>  
+
+    <div class="event-card">
+        <ul class="event-info">
+            <li class="name"><strong>Tisa and McClellan Meet n Greet, Cedarville Fire Hall</strong></li>
+            <li class="description">Meet candidates John Tisa and Antwan McClellan</li>
+            <li class="date-and-time">05/14/25 - 4:00pm</li>
+            <li class="location">30 Maple Ave, Cedarville, NJ 08311</li>
+            <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
+        </ul>
+    </div>  
+
+    <div class="event-card">
+        <ul class="event-info">
+            <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
+            <li class="description">Listen to party messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar"> Party Site</a></li>
+            <li class="date-and-time">05/24/25 - 8:30am</li>
+            <li class="location">Mauricetown Fire Company, 9544 Noble St. Mauricetown, NJ 08349</li>
+            <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
+        </ul>
+    </div>  
             
      <div class="candidate-agenda">
 
